add saint gobain mdp opportunity

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -5,6 +5,9 @@ $maroon: #800000;
 $white: #F1F1F1;
 $fb-blue: #4267b2;
 $yt-red: #282828;
+
+$primary: $white;
+$secondary: $maroon;
 /* End Colors */
 
 /* Begin screen sizes */
