--- a/src/member-resources.hbs
+++ b/src/member-resources.hbs
@@ -14,3 +14,25 @@ Keep up to date with Aggie FIRST Robotics on our social media:
 
 This page is a work in progress so check back for job postings, club updates, and more!
 {{/container}}
+
+{{#container}}
+# Opportunities
+
+{{!-- ## Saint Gobain --}}
+
+{{!-- [![Saint Gobain Essentials of Manufacturing Development Program]({{url '/assets/uploads/opportunity-sg.jpg#sgimg'}})](https://sgna-eom.com/) --}}
+
+[Saint Gobain Essentials of Manufacturing Development Program](https://sgna-eom.com) - Automotive Engineer job opportunity
+
+Highlights:
+
+ - You will be hired into Saint-Gobain as an Automation Engineer and be part of the 24-month Essentials of Manufacturing
+Program (EoM). This will provide you the opportunity to learn at their various businesses through quarterly plant visits
+and join your peers in projects and development trainings.
+ - The Automation Engineer will assist in the implementation and support of plant automation, electrical and database
+systems. The Engineer will assist with the development and implementation of World Class Manufacturing (WCM) projects,
+production, processing methods, and controls.
+
+<button>[More Information]({{url '/assets/uploads/saint-gobain-job-posting.pdf#blank'}})</button>
+
+{{/container}}
