--- a/src/member-resources.hbs
+++ b/src/member-resources.hbs
@@ -15,10 +15,10 @@ Keep up to date with Aggie FIRST Robotics on our social media:
 This page is a work in progress so check back for job postings, club updates, and more!
 {{/container}}
 
-{{#container}}
+{{#container class="opp-wrapper"}}
 # Opportunities
 
-[Saint Gobain Essentials of Manufacturing Development Program](https://sgna-eom.com) - Automotive Engineer job opportunity
+![Saint Gobain logo]({{url '/assets/uploads/saint-gobain-sm.png'}}) [Saint Gobain Essentials of Manufacturing Development Program](https://sgna-eom.com) - Automotive Engineer job opportunity
 
 Highlights:
 
