:bug: update heading for bronze sponsorship

--- a/src/sponsors.hbs
+++ b/src/sponsors.hbs
@@ -28,7 +28,7 @@ Aggie FIRST Robotics has 4 Tiers of sponsorship, each with varying benefits. [Fl
 			<th>Platinum* ($5000+)</th>
 			<th>Gold* ($2000-$4999)</th>
 			<th>Silver ($1000-$1999)</th>
-			<th>Silver ($500-$999)</th>
+			<th>Bronze ($500-$999)</th>
 		</tr>
 		<tr>
 			<td>General Meetings</td>
