--- a/src/assets/sass/_core.scss
+++ b/src/assets/sass/_core.scss
@@ -65,3 +65,9 @@ p, ul {
 	white-space: nowrap;
 	width: 1px;
 }
+
+.will-scroll {
+	overflow-x: scroll;
+	padding: 0 10px;
+	padding-right:30px;
+}
