--- a/src/sponsors.hbs
+++ b/src/sponsors.hbs
@@ -29,7 +29,7 @@ Aggie FIRST Robotics wouldn't be possible without our sponsors!
 Aggie FIRST Robotics has 4 Tiers of sponsorship, each with varying benefits. [Flyer]({{url '/assets/uploads/sponsorship_guide.pdf'}})
 {{/container}}
 
-<section>
+<section class="will-scroll">
 	<table>
 		<tr>
 			<th>Sponsorship Benefits (per year)</th>
