--- a/src/member-resources.hbs
+++ b/src/member-resources.hbs
@@ -5,12 +5,11 @@ title: Member Resources
 
 {{#container}}
 Keep up to date with Aggie FIRST Robotics on our social media:
- - Facebook: [@aggieFIRSTrobotics]({{@site.social.facebook}})
- - Youtube: [Aggie FIRST Robotics]({{@site.social.youtube}})
- - Slack: {{#if @site.social.slackJoin}}
- 	[AggieFIRSTrobotics]({{@site.social.slackJoin}})
-	 {{/if}} ([login]({{@site.social.slack}}))
- - Contact us at aggie.first.robotics@gmail.com
+ - [Facebook]({{@site.social.facebook}})
+ - [YouTube]({{@site.social.youtube}})
+ - [Slack]({{@site.social.slack}})
+	{{#if @site.social.slackJoin}}Not a member? [Join us]({{@site.social.slackJoin}})!{{/if}}
+ - [Contact Us](mailto:aggie.first.robotics@gmail.com)
 
 This page is a work in progress so check back for job postings, club updates, and more!
 {{/container}}
