--- a/src/vex.hbs
+++ b/src/vex.hbs
@@ -5,6 +5,12 @@ title: Vex U
 {{hero}}
 
 {{#container}}
+# Applications are *LIVE*!
+Make sure you've joined the AFR [Slack]({{@site.social.slackJoin}}), and then apply via [Google
+Forms](https://docs.google.com/forms/d/e/1FAIpQLScassFhEZK5UcNlflkg1Ff8VewA2s9K75HB9-0jw6uJ4jfvSw/viewform)!
+{{/container}}
+
+{{#container}}
 This year, we are creating a team for a new robotics competition, VEX U. This program is an expanded version of the VEX
 Robotics Competition that allows for more customization and flexibility. Students will gain experience in a limited
 working environment and interacting with other students within our own club and on other teams. The VEX U college and
