Remove our social media from member resources links
The slack + contact links aren't social media, but it's still a method to keep up to date

--- a/src/member-resources.hbs
+++ b/src/member-resources.hbs
@@ -4,7 +4,7 @@ title: Member Resources
 {{hero}}
 
 {{#container}}
-Keep up to date with Aggie FIRST Robotics on our social media:
+Keep up to date with Aggie FIRST Robotics on:
  - [Facebook]({{@site.social.facebook}})
  - [YouTube]({{@site.social.youtube}})
  - [Slack]({{@site.social.slack}})
