--- a/src/sponsors.hbs
+++ b/src/sponsors.hbs
@@ -88,4 +88,22 @@ Aggie FIRST Robotics has 4 Tiers of sponsorship, each with varying benefits. [Fl
 			<td>✔</td>
 		</tr>
 	</table>
+	<p class="center">
+		*If you plan on donating at this level of sponsorship, please contact us directly at aggie.first.robotics@gmail.com to arrange an in person meeting.
+	</p>
 </section>
+
+
+
+{{#container}}
+## How to Sponsor Us:
+
+1. Go to [giving.tamu.edu](https://www.txamfoundation.com/give.aspx), click Give Now on the top right.
+2. On step 1 select "I would like to give to an unlisted account"
+3. Enter 958870 as the account number.
+4. Follow instructions to give any further information necessary.
+5. Once the donation is submitted, send a confirmation email to aggie.first.robotics@gmail.com with a
+screenshot of the amount donated. The donation takes up to 4 weeks to process and sending this email
+helps us expedite the sponsorship process.
+6. Please include any logos or relevant company branding information in the confirmation email
+{{/container}}
