--- a/src/assets/sass/_core.scss
+++ b/src/assets/sass/_core.scss
@@ -53,6 +53,13 @@ p, ul, ol {
 	font-size: 1rem;
 }
 
+code {
+	background: $lightgrey;
+	padding: 2px 5px;
+	font-family: monospace, monospace;
+	font-size: 1em;
+}
+
 .container.no-border {
 	border-bottom: none;
 }
