Make account number more prominent in sponsor us section

--- a/src/sponsors.hbs
+++ b/src/sponsors.hbs
@@ -100,7 +100,7 @@ Aggie FIRST Robotics has 4 Tiers of sponsorship, each with varying benefits. [Fl
 
 1. Go to [giving.tamu.edu](https://www.txamfoundation.com/give.aspx), click Give Now on the top right.
 2. On step 1 select "I would like to give to an unlisted account"
-3. Enter 958870 as the account number.
+3. Enter `958870` as the account number.
 4. Follow instructions to give any further information necessary.
 5. Once the donation is submitted, send a confirmation email to aggie.first.robotics@gmail.com with a
 screenshot of the amount donated. The donation takes up to 4 weeks to process and sending this email
