--- a/src/assets/sass/_core.scss
+++ b/src/assets/sass/_core.scss
@@ -8,7 +8,8 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	background: #FBFBFB;
+	background: $white;
+	color: $black;
 }
 
 header {
