--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -2,7 +2,8 @@
 $highlight-background: #FBD404;
 $lightgrey: #E8E4DE;
 $maroon: #500000;
-$white: #F1F1F1;
+$white: #FCFCFC;
+$black: #333;
 $fb-blue: #4267b2;
 $yt-red: #282828;
 
