New logo who dis

--- a/src/views/default.hbs
+++ b/src/views/default.hbs
@@ -51,7 +51,7 @@
 				 </a>
 				<div class="logo">
 					<a href="{{url ''}}" title="Aggie FIRST Robotics Home Page">
-						<img src="{{url '/assets/img/logo.png'}}" alt="Aggie FIRST Robotics Logo" title="Aggie FIRST Robotics" />
+						<img src="{{url '/assets/img/afr-logo-new-black-sm.png'}}" alt="Aggie FIRST Robotics Logo" title="Aggie FIRST Robotics" />
 					</a>
 				</div>
 				<ul role="menubar" class="nav-links">
