--- a/src/index.hbs
+++ b/src/index.hbs
@@ -30,7 +30,7 @@ as field crew, referees, announcers, and inspectors. In addition, we helped run 
 mobile machine shop at a robotics competition in San Antonio.
 
 {{/container}}
-{{#container id="calendar-wrapper" class="will-scroll"}}
+{{#container id="calendar-wrapper"}}
 
 ## Calendar
 
