:truck: clean up images folder

--- a/src/assets/sass/pages/_member-resources.scss
+++ b/src/assets/sass/pages/_member-resources.scss
@@ -1,5 +1,5 @@
 .page-member-resources #hero {
-	background-image: url('../img/afr-hero-about.jpg');
+	background-image: url('../img/hero/member-resources.jpg');
 	background-position: 0 -250px;
 	height: 300px;
 	background-size: cover;
