--- a/src/assets/sass/pages/home/_hero.scss
+++ b/src/assets/sass/pages/home/_hero.scss
@@ -3,7 +3,7 @@
 	height: calc(100vh - 100px);
 	line-height: 1.3em;
 	color: white;
-	background: url('../img/hero.jpg');
+	background: url('../img/hero/home.jpg');
 	background-size: cover;
 	background-position: center;
 	transition: height $fast-transition ease-in-out;
