--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -51,7 +51,7 @@
 				 </a>
 				<div class="logo">
 					<a href="{{url ''}}" title="Aggie FIRST Robotics Home Page">
-						<img src="{{url '/assets/img/afr-logo-new-black-sm.png'}}" alt="Aggie FIRST Robotics Logo" title="Aggie FIRST Robotics" />
+						<img src="{{url '/assets/img/logos/afr.png'}}" alt="Aggie FIRST Robotics Logo" title="Aggie FIRST Robotics" />
 					</a>
 				</div>
 				<ul role="menubar" class="nav-links">
@@ -84,7 +84,7 @@
 		</main>
 		<footer class="container">
 			<div class="copyright">&copy; 2018 <a href="{{url ''}}">Aggie FIRST Robotics</a></div>
-			<a class="logo-wrapper" href="https://tamu.edu" target="_blank" rel="noopener noreferrer"><img class="tamu-logo" src="{{url '/assets/img/tamu-logo.png'}}" alt="Texas A&M University Logo" /></a>
+			<a class="logo-wrapper" href="https://tamu.edu" target="_blank" rel="noopener noreferrer"><img class="tamu-logo" src="{{url '/assets/img/logos/tamu.png'}}" alt="Texas A&M University Logo" /></a>
 			<ul class="social">
 				<li>
 					<a href="{{@site.social.facebook}}" class="social-link" target="_blank" rel="noopener noreferrer">
