--- a/src/assets/sass/pages/_rdq.scss
+++ b/src/assets/sass/pages/_rdq.scss
@@ -1,5 +1,5 @@
 .page-activitiesrobots-done-quick #hero {
-	background-image: url('../img/rdq-hero.jpg');
+	background-image: url('../img/hero/rdq.jpg');
 	background-position: center;
 	height: 300px;
 	background-size: cover;
