--- a/src/assets/sass/pages/_sponsors.scss
+++ b/src/assets/sass/pages/_sponsors.scss
@@ -1,5 +1,5 @@
 .page-sponsors #hero {
-	background-image: url('../img/sponsors.jpg');
+	background-image: url('../img/hero/sponsors.jpg');
 	background-position: 0 -300px;
 	height: 300px;
 	background-size: cover;
