--- a/src/assets/sass/pages/_vex.scss
+++ b/src/assets/sass/pages/_vex.scss
@@ -1,5 +1,5 @@
 .page-activitiesvex #hero {
-	background-image: url('../img/vexu-hero.jpg');
+	background-image: url('../img/hero/vexu.jpg');
 	height: 300px;
 	background-size: cover;
 	background-repeat: no-repeat;
