--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,10 +1,12 @@
 /* Begin Colors */
 $highlight-background: #FBD404;
 $lightgrey: #E8E4DE;
-$maroon: #800000;
-$white: #F1F1F1;
+$maroon: #500000;
+$white: #FCFCFC;
+$black: #333;
 $fb-blue: #4267b2;
 $yt-red: #282828;
+$yt-red: #FF0000;
 
 $primary: $white;
 $secondary: $maroon;
