--- a/src/assets/sass/pages/_sponsors.scss
+++ b/src/assets/sass/pages/_sponsors.scss
@@ -1,5 +1,5 @@
 .page-sponsors #hero {
-	background-image: url('../img/sponsors.jpg');
+	background-image: url('../img/hero/sponsors.jpg');
 	background-position: 0 -300px;
 	height: 300px;
 	background-size: cover;
@@ -43,6 +43,20 @@
 		line-height: 6;
 		white-space: nowrap;
 		padding: 5px;
+
+		@for $i from 1 through 5 {
+			&:nth-child(#{$i}) {
+				@if $i != 1 {
+					color: $white;
+
+					@if $i == 1 {
+						background-color: $maroon;
+					} @else {
+						background-color: lighten($maroon, $i * 2%);
+					}
+				}
+			}
+		}
 	}
 
 	td {
