--- a/src/pages/rdq.hbs
+++ b/src/pages/rdq.hbs
@@ -10,7 +10,7 @@ simpleGradient: true
 
 Robots Done Quick (<abbr title="Robots Done Quick">RDQ</abbr>) is a small group of around 12-15 people who will be designing, building, and presenting a robot designed for the current FRC challenge. However, unlike in high-school, where teams have approximately six weeks to build a robot, we will be attempting to complete the challenge within a week of kickoff. Afterwards, we will attend a faux competition with other teams in order to showcase different strategies that can be used when competing.
 
-The second annual RDQ event will take place January 5 - January 12 2019, and applications will open towards the beginning of the fall semester for all A&M students.
+The second annual RDQ event will take place January 5 - January 12 2019.{{!-- , and applications will open towards the beginning of the fall semester for all A&M students. --}}
 
 Our first RDQ event occurred last January. We learned a lot, and will continue to work on the robot we created, which we can use at offseason events in the fall for pre-rookie use.
 
