--- a/src/pages/vex.hbs
+++ b/src/pages/vex.hbs
@@ -10,5 +10,5 @@ Robotics Competition that allows for more customization and flexibility. Student
 working environment and interacting with other students within our own club and on other teams. The VEX U college and
 university competition has more than 300 teams competing globally.
 
-Applications will open towards the beginning of the fall semester for all A&M students.
+{{!-- Applications will open towards the beginning of the fall semester for all A&M students. --}}
 {{/container}}
