Use icon helper when possible

--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -88,12 +88,12 @@
 			<ul class="social">
 				<li>
 					<a href="{{@site.social.facebook}}" class="social-link" target="_blank" rel="noopener noreferrer">
-						<svg class="logo fb-logo" height="24px" width="24px" viewBox="0 0 58 58" fill="#FFF"><title>Facebook</title><path d="M53.85,0H3.15A3.15,3.15,0,0,0,0,3.15v50.7A3.15,3.15,0,0,0,3.15,57h27.3V35H23V26.33h7.41V20c0-7.37,4.49-11.38,11.06-11.38A62.15,62.15,0,0,1,48.15,9v7.69H43.61c-3.57,0-4.26,1.69-4.26,4.18v5.5H47.9L46.79,35H39.35V57h14.5A3.15,3.15,0,0,0,57,53.85V3.15A3.15,3.15,0,0,0,53.85,0Z" /></svg>
+						{{icon "facebook" wrapper="false"}}
 					</a>
 				</li>
 				<li>
 					<a href="{{@site.social.youtube}}" class="social-link" target="_blank" rel="noopener noreferrer">
-						<svg viewBox="0 0 176 124" height="20px" class="logo yt-logo" fill="#FFF"><title>Youtube</title><path d="M180.32,53.36A22.12,22.12,0,0,0,164.76,37.7C151,34,96,34,96,34s-55,0-68.76,3.7A22.12,22.12,0,0,0,11.68,53.36C8,67.18,8,96,8,96s0,28.82,3.68,42.64A22.12,22.12,0,0,0,27.24,154.3C41,158,96,158,96,158s55,0,68.76-3.7a22.12,22.12,0,0,0,15.56-15.66C184,124.82,184,96,184,96S184,67.18,180.32,53.36ZM78,122.17V69.83L124,96Z" transform="translate(-8 -34)" /></svg>
+						{{icon "youtube" wrapper="false"}}
 					</a>
 				</li>
 			</ul>
