--- a/src/pages/rdq.hbs
+++ b/src/pages/rdq.hbs
@@ -1,6 +1,6 @@
 ---
 path: /activities/robots-done-quick/
-title: Robots Done Quick
+title: Robots Done Quick - Aggie FIRST Robotics
 simpleGradient: true
 ---
 
