--- a/src/pages/member-resources.hbs
+++ b/src/pages/member-resources.hbs
@@ -3,13 +3,13 @@ title: Member Resources - Aggie FIRST Robotics
 ---
 {{hero}}
 
-{{#container}}
-Keep up to date with Aggie FIRST Robotics on:
- - [Facebook]({{@site.social.facebook}})
- - [YouTube]({{@site.social.youtube}})
- - [Slack]({{@site.social.slack}})
+{{#container class="color-social-icons social-links"}}
+Keep up to date with Aggie FIRST Robotics:
+ - <a title="Facebook" href="{{@site.social.facebook}}">{{icon "facebook"}}/aggieFIRSTrobotics</a>
+ - <a title="Youtube" href="{{@site.social.youtube}}">{{icon "youtube"}}/Aggie FIRST Robotics</a>
+ - <a title="Slack" href="{{@site.social.slack}}">{{icon "slack"}}/aggiefirstrobotics</a>
 	{{#if @site.social.slackJoin}}Not a member? [Join us]({{@site.social.slackJoin}})!{{/if}}
- - [Contact Us](mailto:aggie.first.robotics@gmail.com)
+ - <a title="Email" href="mailto:aggie.first.robotics@gmail.com">{{icon "mail"}} aggie.first.robotics@gmail.com</a>
 
 This page is a work in progress so check back for job postings, club updates, and more!
 {{/container}}
