Remove extraneous slashes

--- a/src/pages/member-resources.hbs
+++ b/src/pages/member-resources.hbs
@@ -6,8 +6,8 @@ title: Member Resources - Aggie FIRST Robotics
 {{#container class="color-social-icons social-links"}}
 Keep up to date with Aggie FIRST Robotics:
  - <a title="Facebook" href="{{@site.social.facebook}}">{{icon "facebook"}}/aggieFIRSTrobotics</a>
- - <a title="Youtube" href="{{@site.social.youtube}}">{{icon "youtube"}}/Aggie FIRST Robotics</a>
- - <a title="Slack" href="{{@site.social.slack}}">{{icon "slack"}}/aggiefirstrobotics</a>
+ - <a title="Youtube" href="{{@site.social.youtube}}">{{icon "youtube"}} Aggie FIRST Robotics</a>
+ - <a title="Slack" href="{{@site.social.slack}}">{{icon "slack"}} aggiefirstrobotics</a>
 	{{#if @site.social.slackJoin}}Not a member? [Join us]({{@site.social.slackJoin}})!{{/if}}
  - <a title="Email" href="mailto:aggie.first.robotics@gmail.com">{{icon "mail"}} aggie.first.robotics@gmail.com</a>
 
