--- a/src/assets/sass/_core.scss
+++ b/src/assets/sass/_core.scss
@@ -79,3 +79,16 @@ code {
 	padding: 0 10px;
 	padding-right:30px;
 }
+
+.color-social-icons {
+	.fb-logo path {
+		fill: $fb-blue
+	}
+
+	.yt-logo path {
+		fill: $yt-red;
+	}
+	.logo-mail path {
+		fill: $maroon;
+	}
+}
