--- a/src/pages/home.hbs
+++ b/src/pages/home.hbs
@@ -32,9 +32,5 @@ as field crew, referees, announcers, and inspectors. In addition, we helped run 
 mobile machine shop at a robotics competition in San Antonio.
 
 {{/container}}
-<section id="calendar-wrapper">
 
-## Calendar
-
-<iframe frameborder="0" width="100%" height="100%" src="https://calendar.google.com/calendar/embed?src=fa7oundi4i0fp9dpc5juodqrug%40group.calendar.google.com&ctz=America%2FChicago"></iframe>
-</section>
+{{> "calendar"}}
