Add calendar to navigation

--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -62,6 +62,7 @@
 						<li><a href="{{url '/activities/volunteering'}}">Volunteering</a></li>
 					</ul></li>
 					<li role="none"><a role="menuitem" href="{{url '/member-resources'}}">Member Resources</a></li>
+					<li role="none"><a role="menuitem" href="{{url '/calendar'}}">Calendar</a></li>
 					<li role="none"><a role="menuitem" href="{{url '/sponsors'}}">Sponsors</a></li>
 				</ul>
 			</nav>
