add missing ampersand to calendar embed

--- a/src/components/calendar.hbs
+++ b/src/components/calendar.hbs
@@ -2,5 +2,5 @@
 
 ## Calendar
 
-<iframe frameborder="0" width="100%" height="100%" src="https://calendar.google.com/calendar/embed?src=fa7oundi4i0fp9dpc5juodqrug%40group.calendar.google.com&src=e799n9m9lvgcneiggbeqsbc4pk%40group.calendar.google.comctz=America%2FChicago"></iframe>
+<iframe frameborder="0" width="100%" height="100%" src="https://calendar.google.com/calendar/embed?src=fa7oundi4i0fp9dpc5juodqrug%40group.calendar.google.com&src=e799n9m9lvgcneiggbeqsbc4pk%40group.calendar.google.com&ctz=America%2FChicago"></iframe>
 </section>
