Add volunteering dates to volunteering page
Uses google calendar embeds

--- a/src/pages/volunteering.hbs
+++ b/src/pages/volunteering.hbs
@@ -24,18 +24,7 @@ back to you.
 {{#container}}
 ## Upcoming volunteering opportunities
 
- - 12/1
-  - DFW FLL
- - 12/8
-  - DFW FLL
-  - LASA FLL (Austin)
-  - Westwood FLL (Austin)
- - 12/15
-  - DFW FLL
-  - PISD VEX Tournament
-  - Anderson FLL (Austin)
-
-
+<iframe class="vertically-centered" src="https://calendar.google.com/calendar/embed?showTitle=0&showTabs=0&showCalendars=0&mode=AGENDA&src=e799n9m9lvgcneiggbeqsbc4pk%40group.calendar.google.com&ctz=America%2FChicago&dates=20181111%2f20201101" height="250" frameborder="0" scrolling="no"></iframe>
 {{/container}}
 
 {{#container}}
@@ -49,5 +38,4 @@ below:
 - STEM volunteering at events not affiliated with AFR: 1
 
 Submit Points [via Google Forms](https://docs.google.com/forms/u/1/d/e/1FAIpQLSc5kH7q6orZF8QK9yw_k2d4QtzNzzw3jeWg1vVlTqgqFAru_Q/viewform)
-
 {{/container}}
