--- a/src/assets/sass/navigation/_children.scss
+++ b/src/assets/sass/navigation/_children.scss
@@ -28,7 +28,8 @@
 		background: transparent;
 		padding: 0;
 		margin: 0;
-		transition: all $medium-transition ease;
+		transition: $medium-transition ease;
+		transition-property: border, background, visibility, opacity;
 
 		li:nth-child(1) {
 			border-top: 1px solid $nav-link-color;
@@ -40,7 +41,6 @@
 			border-bottom: 1px solid $nav-link-color;
 			width: 100%;
 			white-space: nowrap;
-
 		}
 
 		a {
