:sparkles: Add some visual helpers
Centered content + fancy buttons!

Migrated member resources to use the fancy button helper

--- a/src/pages/member-resources.hbs
+++ b/src/pages/member-resources.hbs
@@ -28,6 +28,8 @@ and join your peers in projects and development trainings.
 systems. The Engineer will assist with the development and implementation of World Class Manufacturing (WCM) projects,
 production, processing methods, and controls.
 
-<button>[More Information]({{url '/assets/uploads/saint-gobain-job-posting.pdf#blank'}})</button>
+{{#fancy-button}}
+	[More Information]({{url '/assets/uploads/saint-gobain-job-posting.pdf#blank'}})
+{{/fancy-button}}
 
 {{/container}}
