--- a/src/assets/sass/_components.scss
+++ b/src/assets/sass/_components.scss
@@ -2,5 +2,6 @@
 @import 'components/shadows';
 @import 'components/spacing';
 @import 'components/embed';
+@import 'components/fancy-button';
 @import 'components/sponsor-strip';
 // @import 'components/sidebars';
