Add VEX U content

--- a/src/pages/vex.hbs
+++ b/src/pages/vex.hbs
@@ -5,10 +5,41 @@ title: VEX U - Aggie FIRST Robotics
 {{hero}}
 
 {{#container}}
-This year, we are creating a team for a new robotics competition, VEX U. This program is an expanded version of the VEX
-Robotics Competition that allows for more customization and flexibility. Students will gain experience in a limited
-working environment and interacting with other students within our own club and on other teams. The VEX U college and
-university competition has more than 300 teams competing globally.
+VEX U is a collegiate level robotics competition that AFR uses to learn and practice engineering at a lower-level,
+undergraduate level on a low budget. It offers a traditional FIRST style challenge on a smaller scale. AFR uses VEX U
+to keep people excited over science, technology, engineering and math, and to also offer undergraduates a stepping
+stone to larger scale design challenges such as SAE.
 
-{{!-- Applications will open towards the beginning of the fall semester for all A&M students. --}}
+Unfortunately our open applications are closed, however if you are interested in joining the waitlist we welcome you to
+apply. Our waitlist is merit based so those who have applied before you have no advantage over your application. When a
+position opens up on the team, you will be contacted and invited to the team. If you’re unsure about what kind of
+commitments we’re looking for we invite you to come to our Friday General Build Meetings from 6:00 PM to 10:00 PM on
+the first floor of Zachary at the Fischer Engineering Design Center.
+
+{{#center}}
+	{{#fancy-button}}
+		[Join the Waitlist](https://goo.gl/forms/rCKtoLPNS9li6qG43)
+	{{/fancy-button}}
+{{/center}}
+
+Our VEX U Contact is [Yan Yao](mailto:yanpyao@tamu.edu)
+{{/container}}
+
+{{#container}}
+# Turning Point
+
+VEX Robotics Competition Turning Point is played on a 12’x12’ square field configured as seen to the right. Two teams –
+one “red” and one “blue” – composed of two robots each, compete in matches consisting of a forty-five second autonomous
+period followed by seventy-five seconds of driver-controlled play.
+
+The object of the game is to attain a higher score than the opposing Alliance by High Scoring or Low Scoring Caps,
+Toggling Flags, and by Alliance Parking or Center Parking Robots on the Platforms.
+
+We plan on competing at:
+ - SKILLS: Pasadena VEX U - December 15
+ - SKILLS: Austin VEX U - January 19
+ - TOURNAMENT: Clearlake VEX U - February 23
+
+More competition details to come!
+
 {{/container}}
