Normalize capitalization of waitlist in VEX page

--- a/src/pages/vex.hbs
+++ b/src/pages/vex.hbs
@@ -18,7 +18,7 @@ the first floor of Zachary at the Fischer Engineering Design Center.
 
 {{#center}}
 	{{#fancy-button}}
-		[Join the Waitlist](https://goo.gl/forms/rCKtoLPNS9li6qG43)
+		[Join the waitlist](https://goo.gl/forms/rCKtoLPNS9li6qG43)
 	{{/fancy-button}}
 {{/center}}
 
