update volunteering calendar width

--- a/src/pages/volunteering.hbs
+++ b/src/pages/volunteering.hbs
@@ -24,7 +24,8 @@ back to you.
 {{#container}}
 ## Upcoming volunteering opportunities
 
-<iframe class="vertically-centered" src="https://calendar.google.com/calendar/embed?showTitle=0&showTabs=0&showCalendars=0&mode=AGENDA&src=e799n9m9lvgcneiggbeqsbc4pk%40group.calendar.google.com&ctz=America%2FChicago&dates=20181111%2f20201101" height="250" frameborder="0" scrolling="no"></iframe>
+<iframe class="vertically-centered" src="https://calendar.google.com/calendar/embed?showTitle=0&showTabs=0&showCalendars=0&mode=AGENDA&src=e799n9m9lvgcneiggbeqsbc4pk%40group.calendar.google.com&ctz=America%2FChicago&dates=20181111%2f20201101" height="250" 
+width="500" frameborder="0" scrolling="no"></iframe>
 {{/container}}
 
 {{#container}}
