--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -59,8 +59,10 @@
 					<li class="has-children" role="none"><a role="menuitem" {{!--href="{{url '/activities'}}"--}}>Activities</a><ul>
 						<li><a href="{{url '/activities/vex'}}">VEX U</a></li>
 						<li><a href="{{url '/activities/robots-done-quick'}}">Robots Done Quick</a></li>
+						<li><a href="{{url '/activities/volunteering'}}">Volunteering</a></li>
 					</ul></li>
 					<li role="none"><a role="menuitem" href="{{url '/member-resources'}}">Member Resources</a></li>
+					<li role="none"><a role="menuitem" href="{{url '/calendar'}}">Calendar</a></li>
 					<li role="none"><a role="menuitem" href="{{url '/sponsors'}}">Sponsors</a></li>
 				</ul>
 			</nav>
