--- a/src/pages/member-resources.hbs
+++ b/src/pages/member-resources.hbs
@@ -14,7 +14,7 @@ Keep up to date with Aggie FIRST Robotics:
 This page is a work in progress so check back for job postings, club updates, and more!
 {{/container}}
 
-{{#container class="opp-wrapper"}}
+{{!--{{#container class="opp-wrapper"}}
 # Opportunities
 
 ![Saint Gobain logo]({{url '/assets/uploads/saint-gobain-sm.png'}}) [Saint Gobain Essentials of Manufacturing Development Program](https://sgna-eom.com) - Automotive Engineer job opportunity
@@ -33,3 +33,4 @@ production, processing methods, and controls.
 {{/fancy-button}}
 
 {{/container}}
+--}}
